# SBO

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  package-lock.json  package.json  server.js
public/: game.html  home.html  script.js
public/scripts/: game.js  home.js  home.js.map  home.ts  main.js  main.js.map  main.ts  tsconfig.json
src/: base_state.hpp  entity.cpp  entity.hpp  event_handler_system.cpp  event_handler_system.hpp  game.cpp  game.hpp  game_client.cpp  game_client.hpp  game_server.cpp  game_server.hpp  main.cpp  networking_system.cpp  networking_system.hpp  position_system.cpp  position_system.hpp
src/components/: position_component.cpp  position_component.hpp
src/systems/: event_handler_system.cpp  event_handler_system.hpp  position_system.cpp  position_system.hpp
